# gpsCalibration

./: README.md
data/gpsCalibration/: bag_list.txt  original_gps_data.txt
modules/featureMap/: README.md  run.sh
modules/featureMap/src/featureMap/: CMakeLists.txt  package.xml
modules/featureMap/src/featureMap/include/featureMap/: CellInfo.h  ENU2Local.h  FeatureMapFusion.h  LineInfo.h  Optimizer.h
modules/featureMap/src/featureMap/launch/: featureMap.launch
modules/featureMap/src/featureMap/lib/: CellInfo.cpp  ENU2Local.cpp  FeatureMapFusion.cpp  LineInfo.cpp  Optimizer.cpp
modules/featureMap/src/featureMap/msg/: ChipLineInformation.msg  IMFeatureVector.msg  IMGNSS_Pointclouds2.msg  SVDPoints.msg
modules/featureMap/src/featureMap/src/: featureExtract.cpp  laserMapping.cpp  laserOdometry.cpp  lineSelect.cpp  scanRegistration.cpp  transformMaintenance.cpp
modules/gpsCalibration/: README.md
modules/gpsCalibration/src/gpsCalibration/: CMakeLists.txt
tools/drawFeatureMap/: CMakeLists.txt  README.md  run.sh
tools/drawFeatureMap/include/: CellInfo.h  FeatureMapFusion.h
tools/drawFeatureMap/src/: main.cpp
tools/drawFeatureMap/src/DrawFeatureMap/: CellInfo.cpp  FeatureMapFusion.cpp
